Fix entry featured image margin on mobile.

--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -353,6 +353,10 @@
 
 		.entry-featured-image {
 			min-height: auto;
+
+			@include media( mobile ) {
+				margin-left: $x-space-sm;
+			}
 		}
 
 		.entry-summary {
